# I_have_school_deno_2nd

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GEMINI.md  README.md  SKILL.md  create_grades.ts  deno.json  logic.test.ts  main.ts  mdx-routes.ts  package.json  test_scan.ts  validate_curriculum.ts  vite.config.ts
.githooks/: pre-commit
artifact/: evaluation_report.md.resolved
assets/: styles.css
components/: Button.tsx  CurriculumLayout.tsx  GlobalNav.tsx  UserStatusBar.tsx
config/: app.ts  env.ts  plans.ts
curriculums/: _lesson_template.mdx
db/: schema.ts
docs/: 00_document_index.md  03_deno_json_explanation.txt  04_understanding_components.txt  05_auto_mdx_routing.txt  06_wasm_support.txt  07_testing_guide.txt  08_troubleshooting_mdx_math.txt  09_troubleshooting_mdx_routing.txt  0_.md  10_how_to_use_wasm.txt  11_wasm_host_guest_model.txt  12_mdx_vs_islands.txt  13_islands_and_wasm_integration.txt  14_islands_javascript_vs_dom.txt  15_javascript_imports_explained.txt  16_islands_the_living_html.txt  17_wasm_glue_code_explained.txt  18_building_rust_games_in_islands.txt  19_mdx_is_html_plus_islands.txt  20_mdx_conversion_timeline.txt  21_fresh_hydration_explained.txt  22_mdx3_under_the_hood.txt  23_server_jsx_vs_client_islands.txt  24_server_performance_and_fast_jsx.txt  25_how_wasm_arrives_in_browser.txt  26_wasm_sources_and_deno_role.txt  27_js_ts_vs_wasm_roles.txt  40_.md  41_.md  (+26 more)
math_engine/: Cargo.toml  README.md  pixi.toml  test_sympy.mojo
math_engine/src/: main.rs
math_engine/src/routes/: mod.rs  solve.rs
(+2385 files in other folders)
